# scipoptsuite-6.0.2-avrech

./: .gitignore  CMakeLists.txt  Makefile  Makefile.doit  README.md
gcg/: Makefile
gcg/src/: githash.c
installation-dir/include/scip/: config.h
scip/: Makefile
scip/applications/Coloring/: Makefile
scip/applications/CycleClustering/: Makefile
scip/applications/MinIISC/: Makefile
scip/applications/PolySCIP/: Makefile
scip/applications/Ringpacking/: Makefile
scip/applications/STP/: Makefile
scip/applications/Scheduler/: Makefile
scip/examples/Binpacking/: Makefile
scip/examples/CallableLibrary/: Makefile
scip/examples/Eventhdlr/: Makefile
scip/examples/GMI/: Makefile
scip/examples/LOP/: Makefile
scip/examples/MIPSolver/: Makefile
scip/examples/Queens/: Makefile
scip/examples/Relaxator/: Makefile
scip/examples/SCFLP/: Makefile
scip/examples/TSP/: Makefile
scip/examples/VRP/: Makefile
scip/interfaces/ampl/: Makefile
scip/src/: CMakeLists.txt
scip/src/scip/: branch_allfullstrong.c  branch_fullstrong.c  branch_relpscost.c  branch_vanillafullstrong.h  cuts.c  githash.c  lp.c  lp.h  pub_lp.h  scip.h  scip_var.c  scip_var.h  scipdefplugins.c  scipdefplugins.h  sepastore.c  sepastore.h  solve.c  stat.c  struct_sepastore.h  struct_stat.h
scip/tests/: Makefile
soplex/: Makefile
soplex/src/soplex/: git_hash.cpp
ug/: Makefile  README
ug/check/: check_fscip.sh  check_parascip.sh
ug/settings/: default.set
ug/src/ug/: githash.cpp  paraCalculationState.h  paraCalculationStateMpi.cpp  paraCalculationStateMpi.h  paraCalculationStateTh.cpp  paraComm.h  paraDef.h  (+60 more)
zimpl/: CHANGELOG  CMakeLists.txt  Makefile  Makefile.nmake
zimpl/check/: bool.zpl  check.sh  condit.zpl  define.zpl  expr.zpl  minlp.zpl  param.zpl  presol.zpl  read.zpl  set.zpl  sos.zpl  subto.zpl  var.zpl  vinst.zpl
zimpl/make/: make.cygwin.x86_64.gnu.opt  make.darwin.x86.gnu.opt  make.darwin.x86_64.gnu.opt  make.linux.x86.gnu.dbg  make.linux.x86.gnu.opt  make.linux.x86_64.clang.dbg  make.linux.x86_64.gnu.dbg  make.linux.x86_64.gnu.opt  make.mingw.x86.gnu.opt  make.sunos.x86.gnu.opt
zimpl/src/: project2.lnt
(+169 files in other folders)
